$Id: History,v 1.50 2001-10-22 14:59:23 japost Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Oct 18th, 2001       J. Apostolakis - geomvol-V03-02-01
 - Added a new 'maximum' epsilon value in G4PropagatorInField,
    as some ill-conditions appear to be due to large proposed relative errors.

Oct 18th, 2001       J. Apostolakis - geomvol-V03-02-00
- Corrected the initialisation of fEpsilonMin in G4PropagatorInField 
   constructor, which was forgotten.

May 31st, 2001       G. Cosmo - geomvol-V03-01-08
- Fixed usage of 'fabs', which belongs to global scope, NOT in std
  namespace. Detected by compilation error on DEC ISO/ANSI setup.
- G4VoxelNavigation.icc: initialised data-member in initialiser list of
  constructor with explicit initialisation to dummy values to allow porting
  on ObjecSpace STL.

May 23rd, 2001       J. Apostolakis - geomvol-V03-01-07
- Added methods to Set the minimum epsilon (relative accuracy) to
  Propagator In Field.

May 23rd, 2001       J. Apostolakis - geomvol-V03-01-06
- Added new parameter to Propagator In Field, 
  fEpsilonMin which is the minimal relative accuracy for MF driving.

May 23rd, 2001       J. Apostolakis - geomvol-V03-01-05