@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4TransportationManager.cc,v 1.8 2001-07-11 10:00:34 gunter Exp $
+// $Id: G4TransportationManager.cc,v 1.9 2001-10-24 15:33:49 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -32,6 +32,7 @@
 
 //  The following inclusions should be left here, as only
 //    the constructor and destructor require them.
+#include "G4GeometryMessenger.hh"
 #include "G4PropagatorInField.hh"
 #include "G4FieldManager.hh"
 
@@ -43,10 +44,12 @@ G4Allocator<G4NavigationLevel>     aNavigationLevelAllocator;
 G4Allocator<G4NavigationLevelRep>  aNavigLevelRepAllocator;
 
 // Ditto: correct order initialisation of class (class) data members
+const G4double G4FieldManager::fDefault_Delta_Intersection_Val= 0.1 * mm;
+const G4double G4FieldManager::fDefault_Delta_One_Step_Value = 0.25 * mm;
 
-const G4double G4PropagatorInField::fDefault_Delta_Intersection_Val= 0.1 * mm;
-const G4double G4PropagatorInField::fDefault_Delta_One_Step_Value = 0.25 * mm;
-const G4double G4PropagatorInField::fEpsilonMin = 1.0e-10 ;
+// const G4double G4PropagatorInField::fDefault_Delta_Intersection_Val= 0.1 * mm;
+// const G4double G4PropagatorInField::fDefault_Delta_One_Step_Value = 0.25 * mm;
+// const G4double G4PropagatorInField::fEpsilonMin = 1.0e-10 ;
 
 G4TransportationManager* G4TransportationManager::fTransportationManager=0;
 
@@ -54,6 +57,7 @@ G4TransportationManager::G4TransportationManager()
 { 
   if (!fTransportationManager)
   {
+    fGeomMessenger=        new G4GeometryMessenger(this);
     fNavigatorForTracking= new G4Navigator() ;
     fFieldManager=         new G4FieldManager() ;
     fPropagatorInField=    new G4PropagatorInField( fNavigatorForTracking,
@@ -68,6 +72,7 @@ G4TransportationManager::G4TransportationManager()
 
 G4TransportationManager::~G4TransportationManager()
 {
+  delete fGeomMessenger;
   delete fNavigatorForTracking; 
   delete fPropagatorInField;
   delete fFieldManager; 
